<!--
  ~ Mantou Earth - Live your wallpaper with live earth
  ~ Copyright (C) 2015  XiNGRZ <xxx@oxo.ooo>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">Mantou Earth</string>
    <string name="app_name_debug" translatable="false">地球 (debug)</string>

    <string name="author">XiNGRZ</string>
    <string name="description">Live your wallpaper with live earth</string>

    <string name="settings">Adjust your earth</string>
    <string name="interval">Update period: %d minutes</string>
    <string name="resolution">Resolution: %dp</string>
    <string name="traffic_estimated">Data usage est.: %d MB/month</string>
    <string name="wifi_only">Update via Wi-Fi only</string>
    <string name="save">Press the button to save settings</string>

    <string name="auto_sync_disabled">Auto-sync is disabled</string>
    <string name="auto_sync_disabled_text">
        Mantou Earth requires your phone\'s Auto-sync setting to be enabled, so that it can update
        images in the background with very little battery consumption.
    </string>
    <string name="auto_sync_enable">Enable it</string>
    <string name="auto_sync_ignore">Ignore</string>

    <string name="free_account">Free account</string>

    <string name="live_wallpaper_unsupported">
        Seems Live Wallpaper feature wasn\'t supported by your phone…
    </string>

    <string name="update_available">New version %s is available</string>
    <string name="update_confirm">Download Now</string>
    <string name="update_cancel">Cancel</string>

    <string name="about">About</string>
    <string name="version" formatted="false">Version %s (%s)</string>
    <string name="fork_me_on_github">Fork me on GitHub</string>
    <string name="sponsor">Sponsor</string>
    <string name="sponsor_text"><![CDATA[
        <p>Thanks to &quot;<a href="http://dwfei.com">Daiwofei</a>&quot;, we got the opportunity
        keep this app free.</p>
    ]]></string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_text"><![CDATA[
        <p>Keep in touch with us by following our account &quot;<a href="copy:馒头社">馒头社</a>&quot;
        on Wechat.</p>
    ]]></string>
    <string name="images_from">Satellite images from</string>
    <string name="inspired_by">Inspired by</string>
    <string name="libraries_used">Libraries used</string>

    <string name="about_copied">\"%s\" is copied to your clipboard</string>

    <string name="about_page" translatable="false"><![CDATA[
    <!DOCTYPE html>
    <html>
        <head>
            <meta charset="utf-8">
            <style>
            html {
                background: #F4F4F4;
                height: 100%;
            }

            body {
                padding: 16px 0;
            }

            * {
                margin: 0;
                padding: 0;
            }

            h2 {
                font-size: 12px;
                padding: 16px;
                color: #999;
            }

            ul {
                list-style: none;
            }

            li a,
            li a:visited,
            .card {
                display: block;
                background: #FFFFFF;
                box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.20);
                padding: 16px;
                color: #555;
                font-size: 16px;
                text-decoration: none;
            }

            li a:hover,
            li a:active {
                text-decoration: none;
                background: #FEFEFE;
            }

            .card {
                font-size: 14px;
                line-height: 1.5;
            }

            .card p:not(:last-child) {
                margin-bottom: 16px;
            }

            .card a {
                color: #FF5252;
            }
            </style>
        </head>
        <body>
            <h2>{{fork_me_on_github}}</h2>
            <ul>
                <li><a href="https://github.com/oxoooo/earth">oxoooo / earth</a></li>
            </ul>
            <h2>{{sponsor}}</h2>
            <div class="card">{{sponsor_text}}</div>
            <h2>{{contact_us}}</h2>
            <div class="card">{{contact_us_text}}</div>
            <h2>{{images_from}}</h2>
            <ul>
                <li><a href="http://himawari8.nict.go.jp">himawari8.nict.go.jp</a></li>
            </ul>
            <h2>{{inspired_by}}</h2>
            <ul>
                <li><a href="https://github.com/bitdust/EarthLiveSharp">bitdust / EarthLiveSharp</a></li>
            </ul>
            <h2>{{libraries_used}}</h2>
            <ul>
                <li><a href="https://github.com/bumptech/glide">bumptech / glide</a></li>
            </ul>
        </body>
    </html>
    ]]></string>

</resources>
