<!--
  ~ Mantou Earth - Live your wallpaper with live earth
  ~ Copyright (C) 2015  XiNGRZ <xxx@oxo.ooo>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    tools:showIn="@layout/main_activity">

    <data>

        <variable
            name="vm"
            type="ooo.oxo.apps.earth.MainViewModel" />

        <variable
            name="accelerated"
            type="boolean" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/settings"
            android:textAppearance="@style/ToolbarTitleTextAppearance" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@{@string/interval(vm.intervalMinutes)}"
            tools:text="@string/interval" />

        <!--suppress AndroidUnknownAttribute -->
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:max="@{vm.intervalProgressMax}"
            android:onProgressChanged="@{vm.intervalProgressWatcher}"
            android:progress="@{vm.intervalProgressValue}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@{@string/resolution(vm.resolution)}"
            tools:text="@string/resolution" />

        <!--suppress AndroidUnknownAttribute -->
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:enabled="@{accelerated}"
            android:max="@{vm.resolutionProgressMax}"
            android:onProgressChanged="@{vm.resolutionProgressWatcher}"
            android:progress="@{vm.resolutionProgressValue}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@{@string/traffic_estimated(vm.traffic)}"
            android:visibility="@{accelerated ? View.VISIBLE : View.GONE}"
            tools:text="@string/traffic_estimated" />

        <!--suppress AndroidUnknownAttribute -->
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:checked="@{vm.wifiOnly}"
            android:onCheckedChangeListener="@{vm.wifiOnlyWatcher}"
            android:text="@string/wifi_only" />

    </LinearLayout>

</layout>
